[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41242

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-15 10:39+0200\n"
+"PO-Revision-Date: 2006-10-04 10:37+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,26 +31,27 @@ msgstr "Continua sense un carregador"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Es necessita establir algunes variables al Pegasos OpenFirmware per a poder "
-"arrencar el sistema automàticament. Al final de la instal·lació, el sistema "
-"arrencarà de nou. A l'indicatiu de Pegasos OpenFirmware, establiu les "
-"següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
+"Es necessita establir algunes variables al microprogramari Genesi per a "
+"poder arrencar el sistema automàticament. Al final de la instal·lació, el "
+"sistema tornarà a arrencar. A l'indicatiu del microprogramari, establiu les "
+"següents variables del microprogramari per a habilitar l'arrencada "
+"automàtica:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Alternativament, podreu arrencar el nucli manualment introduint:"
+msgstr ""
+"Alternativament, podreu arrencar el nucli manualment introduint, a "
+"l'indicatiu del microprogramari:"
 
 #. Type: note
 #. Description
@@ -80,14 +81,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Només us caldrà fer això una vegada. Després, introduïu l'ordre «boot» o "
-"torneu a arrencar el sistema per a continuar amb el següent pas de la "
-"instal·lació."
+"torneu a arrencar el sistema per a iniciar el sistema que s'acaba "
+"d'instal·lar."
 
 #. Type: note
 #. Description
