--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -3,7 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of km.po to Khmer
+# translation of km.po to
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files#
@@ -17,9 +17,9 @@ msgstr ""
 "Project-Id-Version: km\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-08-15 13:50+0700\n"
+"PO-Revision-Date: 2006-10-04 09:11+0700\n"
 "Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
-"Language-Team: Khmer <support@khmeros.info>\n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,25 +35,23 @@ msgstr "បន្ត​ដោយ​គ្មាន​កម្មវិធី​
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"អ្នក​ត្រូវ​កំណត់​អថេរ​មួយ​ចំនួន​នៅ​ក្នុង Pegasos OpenFirmware ដើម្បី​ឲ្យ​ប្រព័ន្ធ​របស់​អ្នក​អាច​ចាប់ផ្ដើម​ដោយ​"
-"ស្វ័យប្រវត្តិ ។ នៅ​ចុងបញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើង​វិញ ។ នៅ​ត្រង់​ប្រអប់ Pegasos "
-"OpenFirmware ចូរ​កំណត់​អថេរ OpenFirmware ខាង​ក្រោម​ដើម្បី​បើក​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ ៖"
+"អថេរ​មួយ​ចំនួន​ត្រូវតែ​បាន​កំណត់​ក្នុង​កម្មវិធី​បង្កប់ Genesi ជា​លំដាប់​សម្រាប់​ប្រព័ន្ធ​របស់​អ្នក​ដើម្បី​ចាប់​ផ្ដើម​ដោយ​"
+"ស្វ័យ​ប្រវត្តិ ។  នៅ​ចុង​បញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើងវិញ ។  នៅឯ​ប្រអប់​បញ្ចូល​​របស់​កម្មវិធី​បង្កប់ "
+"កំណត់​អថេរ​កម្មវិធី​បង្កប់​ដូច​ខាង​ក្រោម ដើម្បី​អនុញ្ញាត ចាប់ផ្ដើម​ដោយ​ស្វ័យប្រវត្តិ ៖"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "អ្នក​អាច​ចាប់​ផ្តើម​ខឺណែល​ដោយ​ដៃ ដោយ​បញ្ចូល ៖"
+msgstr "ជា​ជម្រើស អ្នក​នឹង​អាច​ចាប់ផ្ដើម​ខឺណែល​ដោយ​ដៃ ដោយ​បញ្ចូល នៅ​ប្រអប់​បញ្ចូល​កម្មវិធី​បង្កប់ ។t:"
 
 #. Type: note
 #. Description
@@ -79,13 +77,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"អ្នក​នឹង​ត្រូវ​ធ្វើ​វា​តែ​ម្ដង​ប៉ុណ្ណោះ ។ បន្ទាប់​ពី​នោះ សូម​បញ្ចូល​ពាក្យបញ្ជា \"boot\" ឬ ចាប់ផ្ដើម​ប្រព័ន្ធ​ឡើង​"
-"វិញ ដើម្បី​បន្ត​ទៅ​ដំណាក់កាល​ដំឡើង​បន្ទាប់​ទៀត ។"
+"អ្នក​នឹង​ត្រូវការ​ធ្វើ​តែ​ម្ដង​ប៉ុណ្ណោះ ។  បន្ទាប់​ពី​នោះ​មក បញ្ចូល​ពាក្យ​បញ្ជា \"boot\" ឬ ចាប់​ផ្ដើម​ប្រព័ន្ធ​"
+"ឡើង​វិញ ដើម្បី​ប​ន្តប្រព័ន្ធ​ដែល​បាន​ដំឡើង​ថ្មីៗ​របស់​អ្នក ។វិញ ។"
 
 #. Type: note
 #. Description
