--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -20,8 +20,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-16 00:23+0600\n"
-"Last-Translator: Mahay Alam Khan (মাহে আলম খান) <makl10n@yahoo.com>\n"
+"PO-Revision-Date: 2006-10-04 01:54+0600\n"
+"Last-Translator: Mahay Alam Khan (মাহে আলম) <makl10n@yahoo.com>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,26 +37,25 @@ msgstr "বুট লোডার ছাড়াই এগিয়ে যাও"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"আপনার সিস্টেমটি যেন স্বয়ংক্রিয়ভাবে লিনাক্সকে বুট করে, সেজন্য পেগাসোস "
-"ওপেনফার্মওয়্যারে কিছু চলকের মান নির্ধারণ করা প্রয়োজন।  ইনস্টলেশন শেষ হওয়ার পর "
-"সিস্টেমটি রিবুট হবে।  স্বয়ংক্রিয়ভাবে বুট করার প্রক্রিয়া সচল করার জন্য পেগাসোস "
-"ওপেনফার্মওয়্যার প্রম্পটে পরবর্তী চলকগুলোকে সক্রিয় করুন:"
+"আপনার সিস্টেমটি যেন স্বয়ংক্রিয়ভাবে লিনাক্সকে বুট করে, সেজন্য জেনেসি ফার্মওয়্যারের "
+"কিছু চলকের মান ক্রমানুসারে নির্ধারণ করা প্রয়োজন।  ইনস্টলেশন শেষ হওয়ার পর সিস্টেমটি "
+"রিবুট হবে।  স্বয়ংক্রিয়ভাবে বুট করার প্রক্রিয়া সচল করার জন্য ফার্মওয়্যার প্রম্পটে পরবর্তী "
+"চলকগুলোকে সক্রিয় করুন:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "বিকল্প ব্যবস্থা হিসেবে, এটি লিখে আপনি নিজ হাতে কার্নেলকে বুট করতে পারবেন :"
+msgstr ""
+"বিকল্প ব্যবস্থা হিসেবে, আপনি ফার্মওয়্যার প্রম্পটে লিখে, কার্নেলকে বুট করতে পারবেন :"
 
 #. Type: note
 #. Description
@@ -84,13 +83,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"আপনাকে এটি কেবল একবারই করতে হবে।  এরপর, \"boot\" কমান্ড লিখুন অথবা ইনস্টলেশনের "
-"পরবর্তী ধাপে যাওয়ার জন্য সিস্টেমকে রিবুট করুন।"
+"আপনাকে এটি কেবল একবারই করতে হবে।  এরপর, \"boot\" কমান্ড লিখুন অথবা আপনার নতুন "
+"ইনস্টল করা সিস্টেমে জন্য রিবুট করুন।"
 
 #. Type: note
 #. Description
