--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-08-20 07:22+0100\n"
+"PO-Revision-Date: 2006-10-04 07:29+0100\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian>\n"
 "MIME-Version: 1.0\n"
@@ -32,25 +32,24 @@ msgstr "Rendszerbetöltő nélküli továbblépés"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"A Debian automatikus indításához a Pegasos OpenFirmware egyes változóit kell "
+"A Debian automatikus indításához a Genesi firmware egyes változóit kell "
 "beállítani. A telepítés végén a rendszer újraindul. Az automatikus "
-"indításhoz a Pegasos OpenFirmware parancssorban az alábbiakat kell megadni:"
+"indításhoz a firmware parancssorban az alábbiakat kell megadni az "
+"automatikus indításhoz:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "A rendszermag kézzel is indítható lesz, így:"
+msgstr "A kernel kézzel is indítható az alábbi megadásával:"
 
 #. Type: note
 #. Description
@@ -77,13 +76,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Ezt csak egyszer kell megtenni. Ezután a \"a boot\" parancs vagy az "
-"újraindítás a telepítő következő lépésére lép."
+"újraindítás a továbblép az újonnan telepített rendszeren."
 
 #. Type: note
 #. Description
