--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-23 19:48-0300\n"
+"PO-Revision-Date: 2006-10-03 21:31-0300\n"
 "Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
 "Language-Team:  Debia-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -42,12 +42,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alternativamente, você poderá iniciar o kernel manualmente com a opção :"
+"Alternativamente, você poderá iniciar o kernel manualmente informando, no "
+"prompt do firmware :"
 
 #. Type: note
 #. Description
