[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41324

--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -87,6 +87,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"કોઇ બુટ લોડર સ્થાપિત કરેલ નથી, તમે કદાચ તેને પસંદ કરેલ નથી અથવા તમારુ વિશિષ્ટ બંધારણ બુટ "
+"લોડરને હજી સુધી આધાર આપતું નથી."
 
 #. Type: note
 #. Description
@@ -95,3 +97,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"તમારે ${KERNEL} કર્નલ સાથે પાર્ટિશન પર ${BOOT} અને ${ROOT} ને કર્નલ વિકલ્પ તરીકે "
+"રાખીને જાતે બુટ કરવું પડશે."
