--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: hi\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-01 21:33+0530\n"
+"PO-Revision-Date: 2006-10-06 02:35+0530\n"
 "Last-Translator: Nishant Sharma <me at nishants.net>\n"
 "Language-Team: Hindi\n"
 "MIME-Version: 1.0\n"
@@ -44,6 +44,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"आपके सिस्टम को स्वतः बूट करने के लिए जेनेसी फर्मवेयर के कुछ प्राचलों को सेट करना पड़ेगा. "
+"संस्थापना के अंत में सिस्टम रीबूट होगा. ऑटो-बूटिंग को समर्थ करने के लिए फर्मवेयर के प्रॉम्पट "
+"पर निम्न प्राचलों को सेट करें:"
 
 #. Type: note
 #. Description
