--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: uk\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-24 22:53+0200\n"
+"PO-Revision-Date: 2006-10-05 21:44+0200\n"
 "Last-Translator: Eugeniy Meshcheryakov <eugen@debian.org>\n"
 "Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
@@ -48,11 +48,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Також ви можете завантажити ядро вручну ввівши:"
+msgstr ""
+"Також ви зможете завантажити ядро вручну, ввівши в командному рядку "
+"вбудованого ПЗ:"
 
 #. Type: note
 #. Description
