[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41348

--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: dz\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-17 22:37+0530\n"
+"PO-Revision-Date: 2006-10-06 10:45+0530\n"
 "Last-Translator: Jurmey Rabgay <jur_gay@yahoo.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
 "MIME-Version: 1.0\n"
@@ -36,26 +36,25 @@ msgstr "བུཊི་མངོན་གསལ་པ་མེདཔ་སྦེ
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"ཁྱོད་ཀྱི་རིམ་ལུགས་རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་པི་ག་སཱོས་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ནང་འགྱུར་ཅན་ཚུ་"
-"ལ་ལོ་ཅིག་གཞི་སྒྲིག་འབད་དགོ། གཞི་བཙུགས་འབད་བའི་མཇུག་ལུ་རིམ་ལུགས་འདི་བུཊི་འབད་བཏུབ། པེ་ག་སཱོས་འདི་ལུ་"
-"ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འདི་གིས་ནུས་སྤེལ་བྱིནམ་ད་ འོག་གི་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་རང་བཞིན་-"
-"བུཊི་འབད་ནིའི་ལྕོགས་ཅན་བཟོ་ནི་ལུ་གཞི་སྒྲིག་འབད།"
+"ཁྱོད་ཀྱི་རིམ་ལུགས་རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ ཇི་པི་སི་ ཕརཤ་ཝེར་ནང་ འགྱུར་ཅན་ཚུ་ལ་ལོ་ཅིག་ གཞི་"
+"སྒྲིག་འབད་དགོ། གཞི་བཙུགས་མཇུག་བསྡུ་བའི་ཤུལ་ལུ་ རིམ་ལུགས་དེ་བུཊི་འབད་འོང་། རང་བཞིན་བུ་ཊིང་་འབད་ཚུགས་"
+"པའི་དོན་ལུ་ ཕརམ་ཝེར་ནུས་སྤེལ་གུ་ འོག་གི་ཕརམ་ཝེར་་འགྱུར་བ་ཚུ་ གཞི་སྒྲིག་འབད།"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "ཐབས་གཞན་གྱིས་ ཁྱོད་ཀྱིས་ཐོ་བཀོད་འབད་བའི་ཐོག་ལས་ཀར་ནེལ་འདི་ལག་ཐོག་ལས་བུཊི་འབད་ཚུགས།"
+msgstr ""
+"ཐབས་གཞན་གྱི་ཐོག་ལས་ ཁྱོད་ཀྱིས་ཕརམ་ཝེར་ནུས་སྤེལ་གུ་ བཙུགས་པའི་ཐོག་ལས་ ལག་ཐོག་ལས་ཀར་ནེལ་དེ་ བུཊི་"
+"འབད་ཚུགས་:"
 
 #. Type: note
 #. Description
@@ -82,13 +81,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"འ་ནི་འདི་ཁྱོད་ཀྱིས་ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། ཤུལ་ལས་ \"boot\"བརྡ་བཀོད་བཙུགས་ ཡང་ན་ གཞི་བཙུགས་"
-"འབད་ནིའི་གོ་རིམ་ཤུལ་མམ་ལུ་འཕྲོ་མཐུད་ནི་ལུ་རིམ་ལུགས་འདི་ལོག་བུཊི་འབད།"
+"འ་ནི་འདི་ཁྱོད་ཀྱིས་ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། ཤུལ་ལས་ \"boot\"བརྡ་བཀོད་བཙུགས་ ཡང་ན་ ཁྱོད་ཀྱི་རིམ་"
+"ལུགས་གསརཔ་གཞི་བཙུགས་འབད་ཡོད་མི་ལུ་འགྱོ་ནིའི་དོན་ལུ་ རིམ་ལུགས་དེ་ རི་བུཊི་འབད།"
 
 #. Type: note
 #. Description
