--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-14 12:11-0400\n"
+"PO-Revision-Date: 2006-10-05 21:31-0400\n"
 "Last-Translator:  Sunjae park <darehanl@gmail.com>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -30,26 +30,25 @@ msgstr "부트 로더 없이 계속"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"시스템이 자동 부팅하도록 만드려면 Pegasos OpenFirmware에 변수 몇 개를 설정해"
-"야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. Pegasos "
-"OpenFirmware 프롬프트에서 다음 OpenFirmware 변수를 설정해서 자동 부팅을 켤 "
-"수 있습니다:"
+"시스템이 자동 부팅하도록 만드려면 Genesi 펌웨어에 변수 몇 개를 설정해야 합니"
+"다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. 펌웨어 프롬프트에서 다음 "
+"펌웨어 변수를 설정해서 자동 부팅을 켤 수 있습니다:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "아니면, 다음을 입력해서 수동으로 커널을 부팅시킬 수도 있습니다 :"
+msgstr ""
+"또한 펌웨어 프롬프트에서 다음을 입력해서 수동으로 커널을 부팅시킬 수도 있습니"
+"다 :"
 
 #. Type: note
 #. Description
@@ -75,13 +74,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "이 작업을 한 번만 하면 됩니다.  그 다음에 \"boot\" 명령을 입력하거나 시스템"
-"을 다시 시작해서 데비안 설치 다음 단계로 진행하십시오."
+"을 다시 시작해서 방금 설치한 시스템으로 진행하십시오."
 
 #. Type: note
 #. Description
