--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-24 21:56+0200\n"
+"PO-Revision-Date: 2006-10-06 20:39+0200\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -50,17 +50,15 @@ msgstr ""
 "starten. Stellen Sie die folgenden Firmware-Variablen am Firmware-Prompt "
 "ein, damit der Computer automatisch startet:"
 
-# FIXME: remove space
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alternativ können Sie den Kernel von Hand booten, indem Sie Folgendes "
-"eingeben:"
+"Alternativ können Sie den Kernel von Hand booten, indem Sie Folgendes an der "
+"Firmware-Eingabeaufforderung eingeben:"
 
 #. Type: note
 #. Description
