[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41400

--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -11,13 +11,13 @@ msgstr ""
 "Project-Id-Version: debian-installer_packages_po\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-06-26 01:17+0300\n"
+"PO-Revision-Date: 2006-10-07 22:15+0300\n"
 "Last-Translator: Ossama M. Khayat <okhayat@yahoo.com>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=4; plural=n==1 ? 0 : n==0 ? 1 : n==2 ? 2 : 3;\n"
 
 #. Type: text
@@ -30,25 +30,25 @@ msgstr "المتابعة دون محمّل إقلاع"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"يجب تعيين بعض المتغيرات في Pegasos OpenFirmware كي يتمكن نظامك من الإقلاع "
-"آليا. عند نهاية التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات  "
-"OpenFirmware عند ملقن Pegasos OpenFirmware لتمكين الإقلاع الآلي:"
+"يجب تعيين بعض المتغيرات في Genesi firmware كي يتمكن نظامك من الإقلاع آليا. "
+"عند نهاية التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات  firmware عند "
+"ملقن firmware لتمكين الإقلاع الآلي:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "عوضاً عن ذلك، ستكون قادراً على إقلاع النواة يدوياً بكتابة :"
+msgstr ""
+"عوضاً عن ذلك، ستكون قادراً على إقلاع النواة يدوياً بكتابة ما يلي عند ملقن "
+"firmware:"
 
 #. Type: note
 #. Description
@@ -74,7 +74,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
