--- a/debian/po/nb.po
+++ b/debian/po/nb.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-09 20:18+0200\n"
+"PO-Revision-Date: 2006-10-07 20:49+0200\n"
 "Last-Translator: Bjørn Steensrud <bjornst@powertech.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -35,26 +35,26 @@ msgstr "Fortsett uten oppstartslaster"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Noen variabler i Pegasos OpenFirmware må være angitt for at systemet skal "
-"kunne starte automatisk. På slutten av installasjonen vil systemet starte på "
-"nytt. På kommandolinja for Pegasos OpenFirmware kan du angi følgende "
-"variabler for OpenFirmware for å aktivere auto-oppstart:"
+"Noen variabler i fastprogrammet for Genesi må være angitt for at systemet "
+"skal kunne starte automatisk. På slutten av installasjonen vil systemet "
+"starte på nytt. På kommandolinja for fastprogrammet kan du angi følgende "
+"variabler for fastprogram for å aktivere auto-oppstart:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Eller du kan starte kjernen manuelt ved å taste:"
+msgstr ""
+"Eller du kan starte kjernen manuelt ved å taste på kommandolinja for "
+"fastprogrammet:"
 
 #. Type: note
 #. Description
@@ -74,7 +74,7 @@ msgid ""
 msgstr ""
 "Noen av variablene i fastprogrammet til Netwinder NeTTrom må angis for at "
 "systemet skal starte linux automatisk. På slutten av dette "
-"installasjonsssteget vil systemet starte på nytt og fastprogrammet vil prøve "
+"installasjonssteget vil systemet starte på nytt og fastprogrammet vil prøve "
 "å starte systemet automatisk. Du kan avslutte dette ved å trykke en eller "
 "annen tast, og havner da i meny-systemet til NeTTrom. Der skal du angi "
 "følgende kommandoer:"
@@ -82,14 +82,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Du trenger bare gjøre dette én gang. Etterpå skriver du inn «boot»-"
-"kommandoen eller starter systemet på nytt for å fortsette med neste steg i "
-"installasjonen."
+"kommandoen eller starter systemet på nytt for å få tilgang til det "
+"nyinstallerte systemet."
 
 #. Type: note
 #. Description
