--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: mk\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-26 12:56+0200\n"
+"PO-Revision-Date: 2006-10-08 14:29+0200\n"
 "Last-Translator: Georgi Stanojevski <glisha@gmail.com>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -46,11 +46,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Алтернативно, ќе можеш да го бутираш кернелот рачно внесувајќи:"
+msgstr ""
+"Алтернативно, ќе можеш да го бутираш кернелот рачно ако на фирмвер промтот "
+"внесеш:"
 
 #. Type: note
 #. Description
