[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41450

--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-21 18:04+0930\n"
+"PO-Revision-Date: 2006-10-09 17:50+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -35,26 +35,25 @@ msgstr "Tiếp tục lại mà không có bộ tải khởi động"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Cần phải lập một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
-"động khởi động. Tại kết thúc cài đặt, hệ thống sẽ khởi động lại. Tại dấu "
-"nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware theo đây để "
-"bật chạy tự động khởi động:"
+"Có một số biến cần phải được lập trong phần vững Genesi, để hệ thống khởi "
+"động tự động. Sau khi cài đặt xong, hệ thống sẽ khởi động lại. Tại dấu nhắc "
+"phần vững, hãy đặt những biến phần vững sau để bật khả năng khởi động tự "
+"động:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Hoặc bạn có thể tự khởi động hạt nhân bằng cách nhập:"
+msgstr ""
+"Hoặc bạn có thể tự khởi động hạt nhân bằng cách nhập ở dấu nhắc phần vững:"
 
 #. Type: note
 #. Description
@@ -81,14 +80,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Bạn sẽ cần phải làm như thế chỉ một lần thôi. Sau đó, hãy nhập lệnh « boot "
-"» (khởi động) hoặc khởi động lại hệ thống để tiếp tục đến giai đoạn cài đặt "
-"sau."
+"Bạn sẽ cần phải làm việc này chỉ một lần. Sau đó, hãy nhập lệnh « boot "
+"» (khởi động) hoặc khởi động lại hệ thống để tiếp tục đến hệ thống mới cài "
+"đặt."
 
 #. Type: note
 #. Description
