[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41468

--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -29,7 +29,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "બુટ લોડર વગર આગળ વધો"
+msgstr "બૂટ લોડર વગર આગળ વધો"
 
 #. Type: note
 #. Description
@@ -47,13 +47,13 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "બીજી રીતે, તમે જાતે કર્નલને ફર્મવેર પુછે ત્યારે, દાખલ કરીને બુટ કરી શકો છો :"
+msgstr "બીજી રીતે, તમે જાતે કર્નલને ફર્મવેર પુછે ત્યારે, દાખલ કરીને બૂટ કરી શકો છો :"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "આપમેળે બુટ માટે ફર્મવેર ચલો ગોઠવો"
+msgstr "આપમેળે બૂટ માટે ફર્મવેર ચલો ગોઠવો"
 
 #. Type: note
 #. Description
@@ -73,12 +73,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"તમારે આ ફક્ત એક જ વખત કરવાની જરુર છે.  પાછળથી, \"boot\" આદેશ દાખલ કરો અથવા, તમારી "
+"નવી સ્થાપિત કરેલ સિસ્ટમમાં જવા માટે સિસ્ટમને ફરી શરુ કરો."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr "કોઇ બુટ લોડર સ્થાપિત નથી"
+msgstr "કોઇ બૂટ લોડર સ્થાપિત નથી"
 
 #. Type: note
 #. Description
@@ -87,7 +89,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"કોઇ બુટ લોડર સ્થાપિત કરેલ નથી, તમે કદાચ તેને પસંદ કરેલ નથી અથવા તમારુ વિશિષ્ટ બંધારણ બુટ "
+"કોઇ બૂટ લોડર સ્થાપિત કરેલ નથી, તમે કદાચ તેને પસંદ કરેલ નથી અથવા તમારુ વિશિષ્ટ બંધારણ બૂટ "
 "લોડરને હજી સુધી આધાર આપતું નથી."
 
 #. Type: note
@@ -98,4 +100,4 @@ msgid ""
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "તમારે ${KERNEL} કર્નલ સાથે પાર્ટિશન પર ${BOOT} અને ${ROOT} ને કર્નલ વિકલ્પ તરીકે "
-"રાખીને જાતે બુટ કરવું પડશે."
+"રાખીને જાતે બૂટ કરવું પડશે."
