[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41528

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer etch\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-04 10:37+0200\n"
+"PO-Revision-Date: 2006-10-11 11:20+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgid ""
 msgstr ""
 "Es necessita establir algunes variables al microprogramari Genesi per a "
 "poder arrencar el sistema automàticament. Al final de la instal·lació, el "
-"sistema tornarà a arrencar. A l'indicatiu del microprogramari, establiu les "
+"sistema tornarà a arrencar. A l'indicador del microprogramari, establiu les "
 "següents variables del microprogramari per a habilitar l'arrencada "
 "automàtica:"
 
@@ -51,7 +51,7 @@ msgid ""
 "the firmware prompt:"
 msgstr ""
 "Alternativament, podreu arrencar el nucli manualment introduint, a "
-"l'indicatiu del microprogramari:"
+"l'indicador del microprogramari:"
 
 #. Type: note
 #. Description
