--- a/debian/po/ta.po
+++ b/debian/po/ta.po
@@ -3,33 +3,32 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of ta.po to 
+# translation of ta.po to Tamil
+# Tamil messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
 #
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files
-#
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt
-#
+# drtvasudevan <agnihot3@gmail.com>, 2006.
+# Damodharan Rajalingam <rdamodharan@gmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-05-10 19:19+0530\n"
-"Last-Translator: Damodharan Rajalingam <r.damodharan@yahoo.co.in>\n"
-"Language-Team:  <tamil-DI@yahoogroups.com>\n"
+"PO-Revision-Date: 2006-10-12 01:25+0530\n"
+"Last-Translator: Damodharan Rajalingam <rdamodharan@gmail.com>\n"
+"Language-Team: Tamil <tamil-DI@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "பூட் துவக்கி இல்லாமல் தொடர்க."
 
 #. Type: note
 #. Description
@@ -40,6 +39,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"உங்கள் கணினி லினக்ஸ் க்கு தானாக துவங்க ஜெனசி திறந்த ஸ்திர மென்பொருளுக்கு சில மாறிலிகள் "
+"தேவை. நிறுவலின் இறுதியில் கணினி மீண்டும் துவக்கப் படும். ஜெனசி திறந்த ஸ்திர மென்பொருளின் "
+"தூண்டலில் பின்வரும் மாறிலிகளை அமைக்கவும்:"
 
 #. Type: note
 #. Description
@@ -48,12 +50,14 @@ msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"மாற்றாக நீங்கள் கீழ் கண்டதை மென்பொருளின் தூண்டலில்ை கையாயால் உள்ளீடு செய்து உள்கூற்றில் நுழைய "
+"இயலும்:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "தானியங்கி துவக்கத்திற்கு திறந்த ஸ்திர மென்பொருளின் மாறிலிகளைஅமைத்தல்"
 
 #. Type: note
 #. Description
@@ -65,6 +69,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"உங்கள் கணினி லினக்ஸை தானாக துவங்க நெட்வைண்டர் நெட்ராம் திறந்த ஸ்திர மென்பொருளுக்கு சில "
+"மாறிலிகள் தேவை. நிறுவலின் இறுதியில் கணினி மீண்டும் துவக்கப் படும். திறந்த ஸ்திர "
+"மென்பொருள் தானியங்கி துவக்கத்தை முயற்சிக்கும். ஏதேனும் ஒரு விசையை அழுத்துவதால் அதை "
+"கைவிடச் செய்யலாம். பின் நெட்வைண்டர் நெட்ராம் கட்டளை அமைப்பில் விடப் படுவீர்கள். அங்கு பின் "
+"வரும் கட்டளைகளை இயக்கவும்:"
 
 #. Type: note
 #. Description
@@ -73,12 +82,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"இதை நீங்கள் ஒரு முறை மட்டுமே செய்யத் தேவை. அதன் பின் \"boot\" கட்டளையை உள்ளிடலாம் அல்லது "
+"மீண்டும் கணினியை துவக்குவதால் நிறுவலின் அடுத்த கட்டத்திற்கு போகலாம்."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr ""
+msgstr "துவக்கி ஏதும் நிறுவப் படவில்லை"
 
 #. Type: note
 #. Description
@@ -87,6 +98,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"நீங்கள் வேண்டாம் என முடிவு செய்ததாலோ அல்லது உங்கள் கட்டமைப்பு இன்னும் ஆதரவு தராததாலோ "
+"துவக்கி ஏதும் நிறுவப் படவில்லை."
 
 #. Type: note
 #. Description
@@ -95,3 +108,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"நீங்கள் கைமுறையாக ${BOOT} பகிர்வில் உள்ள ${KERNEL} ஆல் ${ROOT} ஐ (kernel argument) "
+"உட்கூறு தரு மதிப்பாகக் கொண்டு துவக்க வேண்டும்."
