[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41606

--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -40,6 +40,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
+"તમારી સિસ્ટમને આપમેળે શરુ થતી બતાવવા માટે કેટલાક ચલ Genesi ફર્મવેરમાં ગોઠવવા પડશે. "
+"સ્થાપનનાં અંત પછી, સિસ્ટમ ફરી શરુ થશે. ફર્મવેર પ્રોમ્પ્ટ વખતે, નીચેનાં ફર્મવેર ચલો આપમેળે-શરુ "
+"કરવા માટે ગોઠવો:"
 
 #. Type: note
 #. Description
@@ -65,6 +68,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"તમારી સિસ્ટમને લિનક્સમાં આપમેળે શરુ થતી બતાવવા માટે કેટલાક ચલ Netwinder NeTTrom "
+"ફર્મવેરમાં ગોઠવવા પડશે. સ્થાપનનાં અંત પછી, સિસ્ટમ ફરી શરુ થશે અને ફર્મવેર આપમેળે શરૂ થવાનો "
+"પ્રયત્ન કરશે. તમે આ ક્રિયા ગમે તે કળ દબાવીને બંધ કરી શકો છો. તમે પછી NeTTrom આદેશ સિસ્ટમ "
+"પર આવી જશે જ્યાં તમારે નીચેનાં આદેશો ચલાવવા પડશે:"
 
 #. Type: note
 #. Description
