--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -18,15 +18,14 @@
 #
 #    Developers do not need to manually edit POT or PO files.
 #
-# Eddy Petrişor <eddy.petrisor@gmail.com>, 2004, 2005, 2006.
-# Eddy Petrisor <eddy_petrisor@yahoo.com>, 2006.
+# Eddy Petrișor <eddy.petrisor@gmail.com>, 2004, 2005, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-27 23:38+0300\n"
-"Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
+"PO-Revision-Date: 2006-10-14 00:17+0300\n"
+"Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -84,11 +83,11 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Unele variabile trebuie să fie ajustate în firmware-ul Netwinder NeTTrom "
-"pentru ca sistemul dvs. să poată porni linux automat. La sfârşitul acestui "
-"stadiu al instalării sistemul va reporni şi firmware-ul va încerca să "
-"pornească automat. Puteţi abandona prin apăsarea unei taste. Veţi fi lăsaţi "
-"la sistemul de comenzi NeTTrom unde va trebui să executaţi următoarele "
-"comenzi:"
+"pentru ca sistemul dumneavoastră să poată porni automat în Linux. La "
+"sfârşitul acestui stadiu al instalării sistemul va reporni şi firmware-ul va "
+"încerca să pornească automat. Puteţi abandona prin apăsarea unei taste. Veţi "
+"fi lăsaţi la sistemul de comenzi NeTTrom unde va trebui să executaţi "
+"următoarele comenzi:"
 
 #. Type: note
 #. Description
@@ -114,7 +113,7 @@ msgid ""
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
 "Nu s-a instalat nici un încărcător de sistem, pentru că aşa aţi ales sau "
-"pentru că arhitectura dvs. nu suportă încă un încărcător de sistem."
+"pentru că arhitectura dumneavoastră nu suportă încă un încărcător de sistem."
 
 #. Type: note
 #. Description
