[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41797

--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -3,28 +3,32 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of ku-neu.po to Kurdish
 # Kurdish messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
+# Erdal Ronahi <erdal.ronahi@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: ku-neu\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-04-20 06:15+0000\n"
+"PO-Revision-Date: 2006-10-16 03:50+0100\n"
 "Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
-"Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
+"Language-Team: Kurdish <ku@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural= n != 1\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "Bêyî pêşbarkerê bidomîne"
 
 #. Type: note
 #. Description
@@ -39,16 +43,20 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
+#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
+"Wekî alternatîf, tu dikarî vê rêzikê binivîse û pêşbarkirina pergala bi "
+"desta n bide destpêkirin:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
 msgstr ""
+"Ji bo pêşbarkirina bixweber guhêrên di nivîsbariya cîhaz de ye tê mîhengkirin"
 
 #. Type: note
 #. Description
@@ -64,16 +72,20 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
+#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
+"Vî karî tenê tu dikarî carekê bike. Di rewşên dûre de fermana \"boot\" "
+"binivîse yan jî bi merhaleya sazkirinê ya dûre re ji bo domandinê pergala "
+"xwe ji nû ve bide destpêkirin."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Tu pêşbarker ne sazkirî ye."
 
 #. Type: note
 #. Description
