[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41805

--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-10-09 17:50+0930\n"
+"PO-Revision-Date: 2006-10-16 15:34+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Tiếp tục lại mà không có bộ tải khởi động"
+msgstr "Tiếp tục không có bộ nạp khởi động"
 
 #. Type: note
 #. Description
@@ -41,10 +41,9 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Có một số biến cần phải được lập trong phần vững Genesi, để hệ thống khởi "
-"động tự động. Sau khi cài đặt xong, hệ thống sẽ khởi động lại. Tại dấu nhắc "
-"phần vững, hãy đặt những biến phần vững sau để bật khả năng khởi động tự "
-"động:"
+"Một số biến cần phải được đặt trong phần vững Genesi, để hệ thống khởi động "
+"tự động. Sau khi cài đặt xong, hệ thống sẽ khởi động lại. Tại dấu nhắc phần "
+"vững, hãy đặt những biến phần vững sau để bật khả năng khởi động tự động:"
 
 #. Type: note
 #. Description
@@ -59,7 +58,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "Đang lập các biến phần vững (firmware) để tự động khởi động"
+msgstr "Đang đặt các biến phần vững để tự động khởi động"
 
 #. Type: note
 #. Description
@@ -71,11 +70,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Một số biến cần phải được lập trong phần vững Netwinder NeTTrom để mà hệ "
-"thống bạn sẽ tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt này, hệ "
-"thống sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Bạn có thể hủy "
-"bỏ hành động này bằng cách bấm bất cứ phím nào. Vậy bạn sẽ được thả vào hệ "
-"thống lệnh NeTTrom nơi cần thực hiện những lệnh theo đây:"
+"Một số biến cần phải được đặt trong phần vững Netwinder NeTTrom để hệ thống "
+"tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt này, hệ thống sẽ "
+"khởi động lại, và phần vững sẽ thử tự động khởi động. Bạn có thể hủy bỏ hành "
+"động này bằng cách bấm bất cứ phím nào. Vậy bạn sẽ được thả vào hệ thống "
+"lệnh NeTTrom nơi bạn cần thực hiện những lệnh này:"
 
 #. Type: note
 #. Description
@@ -84,15 +83,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Bạn sẽ cần phải làm việc này chỉ một lần. Sau đó, hãy nhập lệnh « boot "
-"» (khởi động) hoặc khởi động lại hệ thống để tiếp tục đến hệ thống mới cài "
-"đặt."
+"Bạn cần phải làm việc này chỉ một lần. Sau đó, hãy nhập lệnh « boot » (khởi "
+"động) hoặc khởi động lại hệ thống để tiếp tục đến hệ thống mới cài đặt."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:51
 msgid "No boot loader installed"
-msgstr "Chưa cài đặt bộ tải khởi động"
+msgstr "Chưa cài đặt bộ nạp khởi động"
 
 #. Type: note
 #. Description
@@ -101,8 +99,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Chưa cài đặt bộ tải khởi động nào, hoặc vì bạn chọn như thế hoặc vì kiến "
-"trúc dứt khoát này chưa hỗ trợ bộ tải khởi động."
+"Chưa cài đặt bộ nạp khởi động nào, hoặc vì bạn chọn như thế hoặc vì kiến "
+"trúc riêng này chưa hỗ trợ bộ nạp khởi động."
 
 #. Type: note
 #. Description
