--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-25 10:17+0200\n"
+"PO-Revision-Date: 2006-10-16 21:27+0200\n"
 "Last-Translator:  Elian Myftiu <elian.myftiu@gmail.com>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,26 +31,26 @@ msgstr "Vazhdo pa ngarkues nisjeje"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Disa të ndryshueshme nevojitet të caktohen në Pegasos OpenFirmware në mënyrë "
+"Disa të ndryshueshme nevojitet të caktohen në firmware-in Genesi në mënyrë "
 "që sistemi tënd të nisë automatikisht.  Në fund të instalimit, sistemi do të "
-"riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto të "
-"ndryshueshmet e mëposhtme OpenFirmware për të aktivizuar nisjen automatike:"
+"riniset.  Në rreshtin e komandës të firmware-it, cakto të ndryshueshmet e "
+"mëposhtme për të aktivizuar nisjen automatike:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Përndryshe, do mund të nisësh kernelin manualisht duke përdorur :"
+msgstr ""
+"Përndryshe, do mund të nisësh kernelin manualisht duke shtypur në rreshtin e "
+"komandës:"
 
 #. Type: note
 #. Description
@@ -78,13 +78,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Këtë duhet ta bësh vetëm një herë.  Më pas, shkruaj komandën \"boot\" ose "
-"rinis sistemin për të vazhduar me hapin tjetër të instalimit."
+"rinis sistemin për të vazhduar me sistemin tënd të sapo instaluar."
 
 #. Type: note
 #. Description
