--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -5,7 +5,7 @@
 # 
 # Simplified Chinese translation for Debian Installer.
 #
-# Copyright (C) 2003, 2004, 2005 Software in the Public Interest, Inc.
+# Copyright (C) 2003-2006 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
 # Translated by bbbush (2004), Carlos Z.F. Liu (2004,2005,2006) and
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-08-13 18:39+1200\n"
-"Last-Translator: Carlos Z.F. Liu <carlosliu@users.sourceforge.net>\n"
+"PO-Revision-Date: 2006-10-17 20:51-0500\n"
+"Last-Translator: Ming Hua <minghua@rice.edu>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,31 +33,29 @@ msgstr "不安装启动引导器，继续"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"要使系统能自动启动您的系统，您需要在 Pegasos OpenFirmware 中设置一些变量。在"
-"安装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几"
-"个 OpenFirmware 变量以开启自动启动功能："
+"要使系统能自动启动您的系统，您需要在 Genesi 固件中设置一些变量。在安装结束"
+"后，系统将会重启。在出现固件提示符后，请设置以下几个固件变量以开启自动启动功"
+"能："
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "另外，您还可以通过输入以下内容来手工启动内核："
+msgstr "另外，您可以在固件提示符下输入以下内容来手工启动内核："
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
 msgid "Setting firmware variables for automatic boot"
-msgstr "正在为自动启动设置 firmware 变量"
+msgstr "正在为自动启动设置固件变量"
 
 #. Type: note
 #. Description
@@ -76,13 +74,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"此过程只需要被执行一次。然后，请输入“boot”命令或重启系统以进行安装程序的下一"
-"阶段。"
+"此过程只需要被执行一次。然后，请输入“boot”命令或重启系统以进入您新安装好的系"
+"统。"
 
 #. Type: note
 #. Description
