[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41907

--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -3,6 +3,37 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
+# translation of wo[1].po to Wolof
 # translation of wo.po to Wolof
 # translation of Debian Installer to Wolof
 # Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>, 2005, 2006.
@@ -10,10 +41,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: wo\n"
+"Project-Id-Version: wo[1]\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-09-05 19:50+0000\n"
+"PO-Revision-Date: 2006-10-18 00:27+0000\n"
 "Last-Translator: Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>\n"
 "Language-Team: Wolof <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,27 +62,26 @@ msgstr "Kontine ci ludul sëfkatu boot bi"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Warees naa sampu yenn wariaabal ci Pegasos OpenFirmware ngir sa sistem bi "
-"man boot ci otomatik. Bu istalaasioŋ bi aggee, sistem bi dana reboot. Ci "
-"prompt bu Pegasos OpenFirmware, nanga sampu wariaabal yu OpenFirmware yii di "
-"ñaw ngir nga mana am boot otomatik:"
+"Warees naa sampu yenn wariaabal ci mikrokod (firmware) bu Genesi ngir sa "
+"sistem bi man demaareel boppam. Bu istalaasioŋ bi aggee, sistem bi dana "
+"reboot, maanaa fay takkaat. Ci woote(prompt) bu firmware bi, nanga sampu "
+"wariaabal yu firmware yii di ñaw ngir nga mana am demaareel boppam:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Bu loolu amul nak, du tee nga mana bo kernel bi ak sa loxo, boo dugëlée:"
+"Bu loolu amul nak, du tee nga mana demaare (boot) kernel bi ak sa loxo, boo "
+"joxee ci woote, maanaa prompt bu firmware bi:"
 
 #. Type: note
 #. Description
@@ -79,14 +109,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Lii benn yoon rekk nga koy soxlaa def.  Bu loolu jallee, bindal komaande "
-"\"boot\" walla nga demaarewaat (reboot) sistem bi ngir jall ca etaap bu "
-"istalaasioŋ bi ci toppu."
+"\"boot\" walla nga demaarewaat (reboot) sistem bi ngir jall ca sa sistem bi "
+"ngay doora istale."
 
 #. Type: note
 #. Description
