[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41963

--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -12,7 +12,7 @@
 # Translators:
 # * Parlin Imanuel Toh (parlin_i@yahoo.com), 2004-2005.
 # * I Gede Wijaya S (gwijayas@yahoo.com), 2004.
-# * Arief S F (arief@gurame.fisika.ui.ac.id), 2004.
+# * Arief S F (arief@gurame.fisika.ui.ac.id), 2004-2006
 # * Setyo Nugroho (setyo@gmx.net), 2004.
 #
 msgid ""
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-08-28 13:00+0700\n"
+"PO-Revision-Date: 2006-10-21 13:35+0700\n"
 "Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
 "Language-Team: Debian Indonesia Team <debian-l10n-id@gurame.fisika.ui.ac."
 "id>\n"
@@ -40,27 +40,26 @@ msgstr "Teruskan tanpa boot loader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Beberapa variabel perlu diatur pada Pegasos OpenFirmware agar sistem Anda "
-"dapat booting secara otomatis. Pada akhir instalasi, sistem akan reboot. "
-"Pada prompt Pegasos OpenFirmware, atur variabel OpenFirmware berikut ini "
-"untuk menghidupkan booting otomatis:"
+"Beberapa variabel perlu diatur pada Firmware Genesi agar sistem Anda dapat "
+"booting secara otomatis. Pada akhir instalasi, sistem akan boot-ulang. Pada "
+"prompt Firmware, atur variabel FIrmware berikut ini untuk menghipupkan "
+"booting otomatis:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
 msgstr ""
-"Alternatif lain, Anda dapat melakukan boot secara manual dengan argumen: "
+"Alternatif lain, Anda dapat melakukan boot secara manual dengan mengetik "
+"pada prompt: "
 
 #. Type: note
 #. Description
@@ -88,13 +87,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
 "Anda hanya perlu melakukan ini sekali. Setelah itu, masukkan perintah \"boot"
-"\" atau reboot sistem untuk melanjutkan tahap instalasi berikutnya."
+"\" atau boot-ulang sistem untuk memproses sistem baru Anda."
 
 #. Type: note
 #. Description
