Apply patch from Sven Luther to fix determination of partition number
r42228

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nobootloader (1.13) UNRELEASED; urgency=low
+
+  [ Sven Luther ]
+  * Fix bad sed invocation, which failed on devfs-style paths.
+    Closes: #395259.
+
+ -- Sven Luther <sven@tael.powerlinux.fr>  Wed, 25 Oct 2006 22:59:00 +0200
+
 nobootloader (1.12) unstable; urgency=low
 
   [ Updated translations ]
@@ -31,7 +39,7 @@ nobootloader (1.11) unstable; urgency=low
       partitions at 0.
 
   [ Sven Luther ]
-  * Update template for Genisi systems. Closes #388591.
+  * Update template for Genesi systems. Closes #388591.
 
   [ Christian Perrier ]
   * Avoid splitting a sentence in two parts which can make translations
