--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nobootloader (1.13) UNRELEASED; urgency=low
+nobootloader (1.13) unstable; urgency=low
 
   [ Sven Luther ]
   * Fix bad sed invocation, which failed on devfs-style paths.
     Closes: #395259.
 
- -- Sven Luther <sven@tael.powerlinux.fr>  Wed, 25 Oct 2006 22:59:00 +0200
+ -- Frans Pop <fjp@debian.org>  Thu, 26 Oct 2006 03:46:59 +0200
 
 nobootloader (1.12) unstable; urgency=low
 
