--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nobootloader (1.14) unstable; urgency=low
+
+  [ Sven Luther ]
+  * Genesi firmware 1.3 will be released without the chrp compliant partition
+    numbering finally, so bumped the check to 1.3.99 and up.
+
+ -- Sven Luther <luther@debian.org>  Sun, 29 Oct 2006 09:36:13 +0100
+
 nobootloader (1.13) unstable; urgency=low
 
   [ Sven Luther ]
