[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r42388

--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: bs\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-04-11 11:42+0100\n"
+"PO-Revision-Date: 2006-10-31 02:55+0100\n"
 "Last-Translator: Safir Secerovic <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +22,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: 3\n"
-"X-Poedit-Language: Bosnian\n"
 "X-Poedit-Country: BOSNIA AND HERZEGOVINA\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
@@ -36,28 +35,26 @@ msgstr "Nastavi bez boot loadera"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"Neke varijable se trebaju postaviti Pegasos OpenFirmware-u kako bi Vaš "
+"Neke varijable se trebaju postaviti u Genesi firmware-u kako bi se Vaš "
 "sistem automatski podizao.  Na kraju instalacije, sistem će se ponovo "
-"podići.  Na Pegasos OpenFirmware promptu, postavite slijedeće OpenFirmware "
-"varijable kako bi omogućili automatsko podizanje:"
+"podići.  Na firmware promptu, postavite sljedeće firmware varijable kako bi "
+"omogućili automatsko podizanje:"
 
 #  Type: note
 #  Description
 #. Type: note
 #. Description
 #: ../nobootloader.templates:9
-#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "Alternativno, možete podići kernel ručno unoseći :"
+msgstr "Alternativno, možete podići kernel ručno, unoseći na firmware promptu:"
 
 #. Type: note
 #. Description
@@ -84,14 +81,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Ovo trebate uraditi samo jedanput.  Nakon toga, ukucajte \"boot\" naredbu "
-"ili ponovo podignite sistem kako biste nastavili sa sljedećom fazom "
-"instalacije."
+"Ovo trebate uraditi samo jednom.  Nakon toga, ukucajte \"boot\" naredbu ili "
+"ponovo podignite sistem kako biste nastavili k vašem novo instaliranom "
+"sistemu."
 
 #. Type: note
 #. Description
