--- a/debian/po/bg.po
+++ b/debian/po/bg.po
@@ -8,14 +8,15 @@
 # This file is distributed under the same license as debian-installer.
 # Ognyan Kulev <ogi@fmi.uni-sofia.bg>, 2004, 2005, 2006.
 # Nikola Antonov <nikola@linux-bg.org>, 2004.
+# Damyan Ivanov <dam@modsoftsys.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-09-26 10:53+0000\n"
-"PO-Revision-Date: 2006-04-08 10:14+0300\n"
-"Last-Translator:  Ognyan Kulev <ogi@fmi.uni-sofia.bg>\n"
+"PO-Revision-Date: 2006-10-31 10:29+0200\n"
+"Last-Translator:  Damyan Ivaniv <dam@modsoftsys.com>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,13 +81,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:31
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"Това е нужно да се направи само веднъж. След това въведете командата \"boot"
-"\" или рестартирайте системата, за да продължите със следващите стъпки от "
+"Това е нужно да се направи само веднъж. След това въведете командата „boot“ "
+"или рестартирайте системата, за да продължите със следващите стъпки от "
 "инсталацията."
 
 #. Type: note
